--- a/Sign In-Up Form/SignInUpForm.css
+++ b/Sign In-Up Form/SignInUpForm.css
@@ -16,15 +16,16 @@
     border-radius: 25px;
 }
 h1{
+    font-style:initial;
     font-size: 30px;
     margin-bottom:30px;
     position:relative;
     text-align: center;
     color:rgb(28, 109, 153)
 }
-.input-group{
-    max-height: 140px;
-    transition:max-height 0.5s;
+#namefield{
+    max-height: 65px;
+    transition:max-height;
     overflow: hidden;
 }
 i{
